--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
+    "hbs": "^4.2.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
